try to hardcode to animate

--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -3922,11 +3922,11 @@ a {
   width: 100px;
   height: 100px;
   background-color: red;
-  -webkit-animation-name: shine;
+  -webkit-animation-name: example;
   /* Safari 4.0 - 8.0 */
   -webkit-animation-duration: 4s;
   /* Safari 4.0 - 8.0 */
-  animation-name: shine;
+  animation-name: example;
   animation-duration: 4s; }
 
 .main-container {
@@ -4091,16 +4091,16 @@ a {
   -webkit-transform: translateY(170%);
   transform: translateY(170%); }
 
-@-webkit-keyframes $animationName {
+@-webkit-keyframes shine {
   0% {
-    color: #f8d2c0; }
+    left: 100px; }
   100% {
-    color: #0f0; } }
+    left: 200px; } }
 
-@keyframes $animationName {
+@keyframes shine {
   0% {
-    color: #f8d2c0; }
+    left: 100px; }
   100% {
-    color: #0f0; } }
+    left: 200px; } }
 
 /*# sourceMappingURL=blog-styles.css.map */
