--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -3,6 +3,7 @@
 @import "blog-category";
 @import "blog-create-article";
 @import "blog-show-article";
+@import "blog-animation";
 /*All Page Maybe Used*/
 html {
     font-family: 'Roboto', 'Helvetica', '微軟正黑體', 'Microsoft JhengHei' ,'Arial', sans-serif;
@@ -10,15 +11,7 @@ html {
 a {
     color:color(blue);
 }
-.loading-nav{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
-    -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
-    animation-name: example;
-    animation-duration: 4s;
-}
+
 .main-container{
     margin-top: 65px;
 }
