build category index

--- a/resources/assets/sass/blog-category.scss
+++ b/resources/assets/sass/blog-category.scss
@@ -8,3 +8,9 @@
     max-height: 220px;
     overflow: hidden;
 }
+.collapible-section{
+    background: white;
+}
+.collapsible-header > .tag{
+    margin-left: 5px;
+}
