--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -54,6 +54,9 @@ a {
     margin: 20px;
 }
 /*blog.app.blade.php*/
+.progress-fix{
+    top: 48px;
+}
 .logo-fix {
     font-size: 25px !important;
 }
