--- a/resources/assets/sass/blog-index.scss
+++ b/resources/assets/sass/blog-index.scss
@@ -32,7 +32,6 @@
 .tags-container {
     padding-left: 20px;
     padding-top: 5px;
-    padding-bottom: 5px;
     border-top: 0;
     border-left: 0;
     border-right: 0;
@@ -58,6 +57,13 @@
 
 .category {
     margin-top: 9px;
+    margin-right: -13px;
+    font-weight: 400 !important;
+    font-size: 0.85rem !important;
+}
+.tags-container > a > .category{
+    margin-top: 9px;
+    margin-right: 15px;
     font-weight: 400 !important;
     font-size: 0.85rem !important;
 }
