--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -23,6 +23,11 @@ a {
     border-radius: 16px;
     font-weight: 400;
 }
+code > .tag{
+    color: #f8f8f2;
+    background: 0 0;
+    background-color: 0 0;
+}
 .tag:hover{
     background-color: #2860A0;
     color : #ffffff;
