fix show card content padding

--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -112,7 +112,7 @@ a > .tag:hover{
 }
 .card-content-fix{
     color:color(text-grey);
-    padding:100px !important;
+    padding: 20px 70px 50px !important;
 }
 /*blog.article.create.blade.php*/
 .card-panel-container {
